# nonebot-plugin-hitokoto

./: README.md  pyproject.toml
nonebot_plugin_hitokoto/: __init__.py
